--- a/sources/index.html
+++ b/sources/index.html
@@ -28,13 +28,13 @@ it defines just the basic structure with ids to be addressed
     <script src="js/3rdparty/jquery-2.1.1.min.js" type="text/javascript"></script>
 
     <!-- navigation with sammy.js -->
-    <script src="js/3rdparty/sammy.min.js" type="text/javascript"></script>
+    <script src="js/3rdparty/sammy-0.74.min.js" type="text/javascript"></script>
 
     <!-- touch recognition with hammer.js -->
-    <script src="js/3rdparty/hammer.js" type="text/javascript"></script>
+    <script src="js/3rdparty/hammer-1.1.3.min.js" type="text/javascript"></script>
 
     <!-- knockout as frontend mvc -->
-    <script src="js/3rdparty/knockout-3.0.0.js" type="text/javascript"></script>
+    <script src="js/3rdparty/knockout-3.1.0.js" type="text/javascript"></script>
 
     <!-- knockout binding for hammer -->
     <script src="js/3rdparty/knockouch.js" type="text/javascript"></script>
@@ -94,10 +94,28 @@ it defines just the basic structure with ids to be addressed
 
         <br/>
 
+        <div class="boxheader">sample touch events</div>
+        <div class="box">
+            <br/>
+            <div class="boxheader">swipe</div>
+            <div class="box" data-bind="swipe: swipeHandler">
+                swipe me:
+                <br/>
+            </div>
+            <br/>
+            <div class="boxheader">double tap</div>
+            <div class="box" data-bind="doubletap: doubleTapHandler">
+                doubleTap me:
+                <br/>
+            </div>
+        </div>
+
+        <br/>
+
         <div class="boxheader">view details</div>
         <div class="box">
-            viewmodel.viewstate.header=<b data-bind="text:$root.viewState.header"></b>
-            viewmodel.viewstate.content=<b data-bind="text:$root.viewState.content"></b>
+            viewmodel.viewstate.header=<b data-bind="text:$root.viewState.header"></b><br/>
+            viewmodel.viewstate.content=<b data-bind="text:$root.viewState.content"></b><br/>
             viewmodel.viewstate.footer=<b data-bind="text:$root.viewState.footer"></b>
         </div>
 
@@ -105,7 +123,8 @@ it defines just the basic structure with ids to be addressed
 
         <div class="boxheader">nav details</div>
         <div class="box">
-            location=<b data-bind="text:routing.getLocation()"></b>
+            location=<b data-bind="text:routing.getLocation()"></b><br/>
+            routes=<b data-bind="text:getDefinedRoutes()"></b><br/>
         </div>
     </script>
     <script class="externaltemplate" type="text/html" id="defaultFooter">
