--- a/sources/index.html
+++ b/sources/index.html
@@ -51,8 +51,6 @@ it defines just the basic structure with ids to be addressed
     <script src='js/i18n/project.i18n.en.json' type='text/javascript'></script>
     <script src='js/i18n/jquery.es.json' type='text/javascript'></script>
     <script src='js/i18n/project.i18n.es.json' type='text/javascript'></script>
-    <script src='js/i18n/jquery.ca.json' type='text/javascript'></script>
-    <script src='js/i18n/project.i18n.ca.json' type='text/javascript'></script>
     <script src='js/i18n/i18n.js' type='text/javascript'></script>
 
     <!-- knockout model -->
@@ -71,12 +69,15 @@ it defines just the basic structure with ids to be addressed
 </head>
 <body id="roooot">
 <div id="knockmeout">
-    <div data-bind="template: {name: viewState.header}" id="header"></div>
-    <div data-bind="template: {name: viewState.content}" id="content"></div>
-    <div data-bind="template: {name: viewState.footer}" id="footer"></div>
+    <div data-bind="template: {name: $root.viewState.header()}" id="header"></div>
+    <div data-bind="template: {name: $root.viewState.content()}" id="content"></div>
+    <div data-bind="template: {name: $root.viewState.footer()}" id="footer"></div>
+
+    <!-- the following 3 inlined knockout templates could be externalized for better struture -->
 
     <script class="externaltemplate" type="text/html" id="defaultHeader"><h1 class="headr">Welcome to the cordova
         template!</h1></script>
+
     <script class="externaltemplate" type="text/html" id="defaultContent">
 
         If you see some coordinates, then most probably everything is working as expected.
@@ -97,15 +98,15 @@ it defines just the basic structure with ids to be addressed
         <div class="boxheader">sample touch events</div>
         <div class="box">
             <br/>
-            <div class="boxheader">swipe</div>
+
             <div class="box" data-bind="swipe: swipeHandler">
-                swipe me:
+                - - - - - - - - - swipe here  - - - - - - - - -
                 <br/>
             </div>
             <br/>
-            <div class="boxheader">double tap</div>
+
             <div class="box" data-bind="doubletap: doubleTapHandler">
-                doubleTap me:
+                 - - - - - - - - - double tap here - - - - - - - - - -
                 <br/>
             </div>
         </div>
@@ -114,9 +115,9 @@ it defines just the basic structure with ids to be addressed
 
         <div class="boxheader">view details</div>
         <div class="box">
-            viewmodel.viewstate.header=<b data-bind="text:$root.viewState.header"></b><br/>
-            viewmodel.viewstate.content=<b data-bind="text:$root.viewState.content"></b><br/>
-            viewmodel.viewstate.footer=<b data-bind="text:$root.viewState.footer"></b>
+            viewmodel.viewstate.header=<b data-bind="text:$root.viewState.header()"></b><br/>
+            viewmodel.viewstate.content=<b data-bind="text:$root.viewState.content()"></b><br/>
+            viewmodel.viewstate.footer=<b data-bind="text:$root.viewState.footer()"></b>
         </div>
 
         <br/>
@@ -128,6 +129,7 @@ it defines just the basic structure with ids to be addressed
         </div>
     </script>
     <script class="externaltemplate" type="text/html" id="defaultFooter">
+        <br />
         <div class="footr">
             <hr>
             <img src="images/miniskeletor.jpg">
