--- a/sources/index.html
+++ b/sources/index.html
@@ -75,61 +75,70 @@ it defines just the basic structure with ids to be addressed
 
     <!-- the following 3 inlined knockout templates could be externalized for better struture -->
 
-    <script class="externaltemplate" type="text/html" id="defaultHeader"><h1 class="headr">Welcome to the cordova
-        template!</h1></script>
+    <script class="externaltemplate" type="text/html" id="defaultHeader">
+        <div class="headr">
+            <h1>Welcome to the cordova template!</h1>
+            If you see some coordinates, then most probably everything is working as expected.
+        </div>
+
+    </script>
 
     <script class="externaltemplate" type="text/html" id="defaultContent">
-
-        If you see some coordinates, then most probably everything is working as expected.
-
+        <div class="content">
 
 
-        <br/><br/>
+            <br/><br/>
 
-        <div class="boxheader">Current position</div>
-        <div class="box">
-            longitude: <b data-bind="text: geoLongitude"> </b><br/>
-            latitude: <b data-bind="text: geoLatitude"> </b>
+            <div class="boxheader">Current position</div>
+            <div class="box">
+                longitude: <b data-bind="text: geoLongitude"> </b><br/>
+                latitude: <b data-bind="text: geoLatitude"> </b>
 
-        </div>
+            </div>
 
-        <br/>
-
-        <div class="boxheader">Test the touch interface</div>
-        <div class="box">
             <br/>
 
-            <div class="box center" data-bind="swipe: swipeHandler">
-              < - - - -  swipe here  - - - - - >
+            <div class="boxheader">Test the touch interface</div>
+            <div class="box">
                 <br/>
+
+                <div class="box center" data-bind="swipe: swipeHandler">
+                    < - - - - swipe here - - - - - >
+                    <br/>
+                </div>
+                <br/>
+
+                <div class="box center" data-bind="doubletap: doubleTapHandler">
+                    < - - - - double tap here - - - - >
+                    <br/>
+                </div>
             </div>
+
             <br/>
 
-            <div class="box center" data-bind="doubletap: doubleTapHandler">
-              < - - - - double tap here - - - - >
+            <div class="boxheader">current templates</div>
+            <div class="box">
+                header=<b data-bind="text:$root.viewState.header()"></b><br/>
+                content=<b data-bind="text:$root.viewState.content()"></b><br/>
+                footer=<b data-bind="text:$root.viewState.footer()"></b>
+            </div>
+
+            <br/>
+
+            <div class="boxheader">nav details</div>
+            <div class="box">
+                location=
+                <div data-bind="text:routing.getLocation()"></div>
+                <br/>
+                routes=
+                <div data-bind="text:getDefinedRoutes()"></div>
                 <br/>
             </div>
-        </div>
-
-        <br/>
-
-        <div class="boxheader">current templates</div>
-        <div class="box">
-            header=<b data-bind="text:$root.viewState.header()"></b><br/>
-            content=<b data-bind="text:$root.viewState.content()"></b><br/>
-            footer=<b data-bind="text:$root.viewState.footer()"></b>
-        </div>
-
-        <br/>
-
-        <div class="boxheader">nav details</div>
-        <div class="box">
-            location=<div data-bind="text:routing.getLocation()"></div><br/>
-            routes=<div data-bind="text:getDefinedRoutes()"></div><br/>
         </div>
     </script>
     <script class="externaltemplate" type="text/html" id="defaultFooter">
-        <br />
+        <br/>
+
         <div class="footr">
             <hr>
             <img src="images/miniskeletor.jpg">
