bugfix: wrong projectname prevented icon / splashscreen in ios

--- a/sources/index.html
+++ b/sources/index.html
@@ -103,7 +103,7 @@ it defines just the basic structure with ids to be addressed
 
             <div class="boxheader">Environment</div>
             <div class="box">
-                <b data-bind="text: project_env"> </b>, platform: <b
+                running on <b data-bind="text: project_env"> </b>, platform: <b
                     data-bind="text: project_platform"> </b><br/>
 
 
